--- a/app/templates/content/phish.html
+++ b/app/templates/content/phish.html
@@ -6,62 +6,115 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-4">
-        <Card class="card">
-            <CardHeader>
-            <h5 class="card-category">Phishing101</h5>
-            <CardTitle tag="h3">
-                <p>Phishing101 Materials</p>
-            </CardTitle>
-            </CardHeader>
-            <CardBody>
-            <div class="material-details">
-                <p>Videos</p>   
+<div class="container">
+    <div class="accordion" id="accordionExample">
+        <div class="row">
+            {% for file in phishing101  %}
+            <div class="col-lg-4">
+                <Card class="card">
+                    <CardHeader id="headiongOne">
+                    <h5 class="card-category">Phishing101</h5>
+                    <CardTitle >
+                        <p>Phishing101 Materials</p>
+                    </CardTitle>
+                    </CardHeader>
+                    <CardBody>
+                    <div class="material-details">
+                        <p>Videos</p>   
+                    </div>
+                    </CardBody>
+                    <CardFooter>
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Videos
+                        </button>
+                    </CardFooter>
+                </Card>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headiongOne" data-parent="#accordionExample">
+                    <h1>Video list</h1>
+                    
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                            <label for="form-check-label">
+                                
+                                <p><a href="{{url_for('content.uploaded_file', filename=file['video'])}}">{{file['video']}}</a></p>
+                                
+                            </label>
+                            
+                        </div>
+                    </form>
+                </div>   
             </div>
-            </CardBody>
-            <CardFooter>
-                <a href="/content/uploads" class="btn btn-primary">Videos</a>
-            </CardFooter>
-        </Card>
-        </div>
-        <div class="col-lg-4">
-        <Card class="card">
-            <CardHeader>
-            <h5 class="card-category">Phishing101</h5>
-            <CardTitle tag="h3">
-                <p>Phishing101 Materials</p>
-            </CardTitle>
-            </CardHeader>
-            <CardBody>
-            <div class="material-details">
-                <p>Infographics</p>   
+            <div class="col-lg-4">
+            <Card class="card">
+                <CardHeader id="headingTwo">
+                <h5 class="card-category">Phishing101</h5>
+                <CardTitle >
+                    <p>Phishing101 Materials</p>
+                </CardTitle>
+                </CardHeader>
+                <CardBody>
+                <div class="material-details">
+                    <p>Infographics</p>   
+                </div>
+                </CardBody>
+                <CardFooter>
+                    <button class="btn btn-link  collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                        Infographics
+                    </button>
+                </CardFooter>
+                </Card>
+                <div id="collapseTwo" class="collapse show" aria-labelledby="headiongTwo" data-parent="#accordionExample">
+                    <h1>Infographics list</h1>
+                    <form action="">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                            <label for="form-check-label">
+                                
+                                <p><a href="{{url_for('content.uploaded_file', filename=file['infographic'])}}">{{file['infographic']}}</a></p>
+                                
+                            </label>
+                            
+                        </div>
+                    </form>
+                </div>   
             </div>
-            </CardBody>
-            <CardFooter>
-                <a href="/admin/Phishing101" class="btn btn-primary">Infographics</a>
-            </CardFooter>
-        </Card>
-        </div>
-        <div class="col-lg-4">
-        <Card class="card">
-            <CardHeader>
-            <h5 class="card-category">Phishing101</h5>
-            <CardTitle tag="h3">
-                <p>Phishing101 Materials</p>
-            </CardTitle>
-            </CardHeader>
-            <CardBody>
-            <div class="material-details">
-                <p>Posters</p>   
+            <div class="col-lg-4">
+            <Card class="card">
+                <CardHeader id="headingThree">
+                <h5 class="card-category">Phishing101</h5>
+                <CardTitle >
+                    <p>Phishing101 Materials</p>
+                </CardTitle>
+                </CardHeader>
+                <CardBody>
+                <div class="material-details">
+                    <p>Posters</p>   
+                </div>
+                </CardBody>
+                <CardFooter>
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                        Posters
+                    </button>
+                </CardFooter>
+                </Card>
+                <div id="collapseThree" class="collapse show" aria-labelledby="headiongThree" data-parent="#accordionExample">
+                    <h1>Posters list</h1>
+                    <form action="">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                            <label for="form-check-label">
+                                
+                                <p><a href="{{url_for('content.uploaded_file', filename=file['poster'])}}">{{file['poster']}}</a></p>
+                                
+                            </label>
+                            
+                        </div>
+                    </form>
+                </div>   
             </div>
-            </CardBody>
-            <CardFooter>
-                <a href="/admin/Phishing101" class="btn btn-primary">Posters</a>
-            </CardFooter>
-        </Card>
+            {% endfor  %}
         </div>
+        
     </div>              
 </div>
 {% endblock %}
