--- a/app/static/content/css/black-dashboard.css
+++ b/app/static/content/css/black-dashboard.css
@@ -3647,7 +3647,7 @@
         display: inline-block;
         width: 100%; } }
   
-  .accordion .card:not(:first-of-type):not(:last-of-type) {
+  /* .accordion .card:not(:first-of-type):not(:last-of-type) {
     border-bottom: 0;
     border-radius: 0; }
   
@@ -3661,7 +3661,7 @@
   
   .accordion .card:last-of-type {
     border-top-left-radius: 0;
-    border-top-right-radius: 0; }
+    border-top-right-radius: 0; } */
   
   .breadcrumb {
     display: flex;
