--- a/app/templates/content/base.html
+++ b/app/templates/content/base.html
@@ -10,7 +10,7 @@
     <!-- fontawesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title> {% block title %}Phishing{% endblock %} </title>
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="{{url_for('hello')}}">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Phishing101 <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{url_for('content.phish')}}">Phishing101 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Phishing102</a>
