--- a/app/templates/content/phish.html
+++ b/app/templates/content/phish.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="accordion" id="accordionExample">
         <div class="row">
             {% for file in phishing101  %}
@@ -31,19 +31,21 @@
                 </Card>
                 <div id="collapseOne" class="collapse show" aria-labelledby="headiongOne" data-parent="#accordionExample">
                     <h1>Video list</h1>
-                    
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                             <label for="form-check-label">
-                                
-                                <p><a href="{{url_for('content.uploaded_file', filename=file['video'])}}">{{file['video']}}</a></p>
-                                
+                                <p><a href="{{url_for('content.uploaded_file', filename=file['video'])}}">{{file['video']}}</a></p>   
                             </label>
+                            <div>
+                                <button type="submit">Upload</button>
+                            </div>
+                            <br>
                             
                         </div>
                     </form>
                 </div>   
             </div>
+            <br>
             <div class="col-lg-4">
             <Card class="card">
                 <CardHeader id="headingTwo">
@@ -69,11 +71,12 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                             <label for="form-check-label">
-                                
                                 <p><a href="{{url_for('content.uploaded_file', filename=file['infographic'])}}">{{file['infographic']}}</a></p>
-                                
                             </label>
-                            
+                            <div>
+                                <button type="submit">Upload</button>
+                            </div>
+                            <br>
                         </div>
                     </form>
                 </div>   
@@ -98,16 +101,17 @@
                 </CardFooter>
                 </Card>
                 <div id="collapseThree" class="collapse show" aria-labelledby="headiongThree" data-parent="#accordionExample">
-                    <h1>Posters list</h1>
+                    <h1>Poster list</h1>
                     <form action="">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
-                            <label for="form-check-label">
-                                
+                            <label for="form-check-label"> 
                                 <p><a href="{{url_for('content.uploaded_file', filename=file['poster'])}}">{{file['poster']}}</a></p>
-                                
                             </label>
-                            
+                            <div>
+                                <button type="submit">Upload</button>
+                            </div>
+                            <br>
                         </div>
                     </form>
                 </div>   
